--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
+    "fuse.js": "^3.4.4",
     "handlebars-helpers": "^0.10.0",
     "handlebars.moment": "^1.0.4",
     "http": "0.0.0",
