--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "async": "^2.5.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "botbuilder-adapter-facebook": "^1.0.3",
+    "botkit": "^4.0.2",
     "config": "^3.1.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.0",
@@ -23,6 +25,7 @@
     "handlebars.moment": "^1.0.4",
     "http": "0.0.0",
     "moment": "^2.24.0",
+    "monkii": "^2.0.0-2",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
